--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -56,7 +56,7 @@
     display: block;
   }
   @media only screen and (max-width: $breakpoints_mobile) {
-    scale: 0.8;
+    scale: 0.7;
     margin-right: 20px;
   }
 }
